public/css/style.css
/* Define color scheme */
:root {
    --background: #121212;
    --surface: #1e1e1e;
    --surface-02: #222222;
    --surface-03: #242424;
    --surface-04: #272727;
    --error: #cf6689;
    --primary: #bb86fc;
    --primary-var: #3700b3;
    --secondary: #03dac6;
    --font: rgba(204, 204, 204, 1);
    --font-secondary: rgba(204, 204, 204, .7);
    --font-disabled: rgba(204, 204, 204, .5);
}

/* 
| elevation | overlay |   hex   |
| --------- | ------- | ------- |
|   00dp    |    0%   | #121212 |
|   01dp    |    5%   | #1e1e1e |
|   02dp    |    7%   | #222222 |
|   03dp    |    8%   | #242424 |
|   04dp    |    9%   | #272727 |
|   06dp    |   11%   | #2c2c2c |
|   08dp    |   12%   | #2e2e2e |
|   12dp    |   14%   | #333333 |
|   16dp    |   15%   | #343434 |
|   24dp    |   16%   | #383838 |
*/

/* ---------------------- */
/* Set global css & fonts */
/* ---------------------- */

body {
    font-family: "Open Sans", sans-serif;
    background-color: var(--background);
    color: var(--font);
}

h1, h2, h3, h4, h5, h6 {
    font-family: "Poppins", sans-serif;
}

.navbar {
    background-color: var(--surface);
}

.surface {
    background-color: var(--surface);
    border-radius: 5px;
    padding: 15px;
}

.container {
    padding-top: 1rem;
    max-width: 1140px;
    margin-left: auto;
    margin-right: auto;
}

.error {
    color: var(--error);
}

/* Link CSS */

a {
    color: var(--primary);
    text-decoration: none;
}

a:hover {
    color: var(--primary);
    text-decoration: underline;
}

a:visited {
    color: var(--primary);
    text-decoration: none;
}

/* Navbar CSS */

.navbar {
    margin-left: 0px;
    margin-left: 0px;
    width: 100%;
}

.navbar .brand {
    float: left;
    background-color: pink;
}

.navbar ul {
    margin: 0px;
    padding: 0px;
    overflow: hidden;
    background-color: var(--surface);
    list-style-type: none;
}

.navbar li {
    float: left;
}

.navbar li a {
    display: block;
    color: var(--font);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.navbar li a:hover {
    background-color: var(--surface-04);
}

.navbar .floatright {
    float: right;
}

/* Homepage + hero CSS */

.hero {
    width: auto;
    padding-left: 0;
}

video {
    position: fixed;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    -ms-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
    background: var(--background);
}

.hero-center {
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.hero-button {
    border: none;
    display: inline-block;
    padding: 8px 16px;
    vertical-align: middle;
    overflow: hidden;
    text-decoration: none;
    color: inherit;
    background-color: inherit;
    text-align: center;
    cursor: pointer;
    white-space: nowrap;
    background-color: var(--primary);
    border-radius: 5px;
    color: var(--surface);
}

/* Updates CSS */

.updates article {
    border-radius: 5px;
    background-color: var(--surface);
    padding-left: 12px;
    padding-right: 12px;
    margin-left: 8px;
    margin-right: 8px;
    margin-bottom: 16px;
}

.updates .date {
    color: var(--font-secondary);
    line-height: 0%;
    font-size: smaller;
}

/* Crate Index */
.crate-index span {
    float: right;
}

.crate-index #crate-info {
    grid-area: crate-info
}

.crate-index #timber-crates {
    grid-area: timber-crates;
}

.crate-index #ingot-crates {
    grid-area: ingot-crates;
}

.crate-index ul {
    list-style: none;
    padding: 0%;
}

.crate-index li {
    line-height: 1.6rem;
    padding-left: 1rem;
    padding-right: 1rem;
}

.crate-index li:not(:last-child) {
    margin-bottom: 1rem;
}

.crate-index .alt {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    background-color: var(--surface-02);
    border-radius: 5px;
}

.crate-index #crate-heading {
    padding-left: 1rem;
}

.crate-index hr {
    height: 2px;
    border: none;
    background-color: var(--font-disabled);
    margin-top: -8px;
    margin-bottom: -8px;
    margin-left: 0px;
    width: 100%;
}

.crate-index .btn {
    margin-top: -4px;
    -webkit-appearance: button;
    -moz-appearance: button;
    appearance: button;
    border: none;
    padding: 0.2rem 0.75rem;
    text-align: center;
    text-decoration: none;
    cursor: pointer;
    border-radius: 5px;
    background-color: var(--primary);
    color: var(--surface);
}

/* Crate Table CSS */
.crate-calc #user-inputs{
    grid-area: crate-user-inputs;
}

.crate-calc #table-left{
    grid-area: crate-table-left;
}

.crate-calc #table-right{
    grid-area: crate-table-right;
}

.crate-calc td {
    color: var(--font)
}

.crate-calc th {
    color: var(--font)
}

.crate-calc #count-cost {
    width: 4rem;
}
.crate-calc #ingredient {
    width: 16rem;
}

.crate-calc {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    grid-column-gap: 1rem;
    grid-row-gap: 1rem;
    grid-template-areas:
        "crate-user-inputs crate-user-inputs . . . ."
        "crate-table-left crate-table-left crate-table-left crate-table-right crate-table-right crate-table-right";
}


/* -------------------- */
/* Viewport Breakpoints */
/* -------------------- */

/* Desktop Breakpoint */
@media screen and (min-width:1200px) {
    .updates {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: auto;
        grid-auto-flow: row;
    }

    .crate-index {
        display: grid;
        grid-template-columns: 1fr 1fr;
        /* REMOVE EVENTUALLY */
        grid-template-rows: 1fr 1fr;
        grid-column-gap: 1rem;
        grid-template-areas:
            "crate-info crate-info"
            "timber-crates ingot-crates";
    }

    .crate-index #timber-crates {
        margin-top: -5rem;
    }
    
    .crate-index #ingot-crates {
        margin-top: -5rem;
    }
}

/* Tablet Breakpoint */
@media screen and (min-width:768px) and (max-width: 1199px) {
    .updates {
        margin: auto;
        display: grid;
        grid-template-columns: auto;
        grid-template-rows: auto;
        grid-column-gap: 1rem;
        grid-template-areas:
            "article"
    }

    .crate-index {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        grid-column-gap: 1rem;
        grid-template-areas:
            "crate-info crate-info"
            "timber-crates ingot-crates";
    }

    .crate-index #timber-crates {
        margin-top: -5rem;
    }
    
    .crate-index #ingot-crates {
        margin-top: -5rem;
    }
}

/* Mobile Breakpoint */
@media screen and (max-width:767px) {
    .updates {
        margin: auto;
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        grid-column-gap: 1rem;
        grid-template-areas:
            "article";
    }

    .crate-index {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: 1fr;
        grid-column-gap: 1rem;
        grid-template-areas:
            "crate-info"
            "timber-crates"
            "ingot-crates";
    }
}

